--- a/fly.toml
+++ b/fly.toml
@@ -1,9 +1,9 @@
-# fly.toml app configuration file generated for petshopmanager on 2024-11-11T05:05:51Z
+# fly.toml app configuration file generated for petshopmanagereverson on 2024-11-11T02:30:43-03:00
 #
 # See https://fly.io/docs/reference/configuration/ for information about how to use this file.
 #
 
-app = 'petshopmanager'
+app = 'petshopmanagereverson'
 primary_region = 'gru'
 console_command = '/rails/bin/rails console'
 
@@ -21,4 +21,3 @@ console_command = '/rails/bin/rails console'
   memory = '1gb'
   cpu_kind = 'shared'
   cpus = 1
-  memory_mb = 1024
