--- a/fly.toml
+++ b/fly.toml
@@ -1,9 +1,9 @@
-# fly.toml app configuration file generated for petshopmanagereverson on 2024-11-11T02:30:43-03:00
+# fly.toml app configuration file generated for petshopmanager on 2024-11-11T02:30:43-03:00
 #
 # See https://fly.io/docs/reference/configuration/ for information about how to use this file.
 #
 
-app = 'petshopmanagereverson'
+app = 'petshopmanager'
 primary_region = 'gru'
 console_command = '/rails/bin/rails console'
 
